--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,19 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    restart: always
     volumes:
       - ./assets:/assets
+      - volume:/tmp
     ports:
       - "3000:3000"
     environment:
       IPINFO_TOKEN: ${IPINFO_TOKEN}
+
+volumes:
+  volume:
+    driver: local
+    driver_opts:
+      type: "tmpfs"
+      device: "tmpfs"
+      o: "size=500m"
